with_kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-deployment-ing
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: web-deployment-ing
spec:
  ingressClassName: nginx
  rules:
  - host: trunglv.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-service
            port: 
              number: 80
